Fixed Overlapping of Buttons

--- a/frontend_v2/src/app/components/challenge/challengesubmissions/challengesubmissions.component.scss
+++ b/frontend_v2/src/app/components/challenge/challengesubmissions/challengesubmissions.component.scss
@@ -201,3 +201,13 @@ tr.element-row:not(.expanded-row):active {
     margin-left: 0;
   }
 }
+@media (min-width: 1000px) { 
+  .col-lg-6 {
+    width: 50%;
+  }
+}
+@media (min-width: 768px) {
+  .col-sm-2 {
+    width: 50%;
+  }
+}
